tests/cases/modules/ok/diamond-project-main.ari
mod diamond_project;

fn main() -> i64 {
  return diamond_project::run();
}
