tests/cases/modules/errors/ambiguous-module-main.ari
mod ambiguous_module;

fn main() -> i64 {
  return ambiguous_module::value();
}
